# manch

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE-MIT  README.md  buf.gen.yaml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  release-plz.toml  turbo.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  routeTree.gen.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: agent.rs  commands.rs  db.rs  lib.rs  main.rs
apps/desktop/src/components/: Chat.tsx  Settings.tsx
apps/desktop/src/containers/: GreenRoom.tsx  Performance.tsx  SchedulePage.test.tsx  SchedulePage.tsx  SearchPage.test.tsx  SearchPage.tsx  Settings.test.tsx  Settings.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Stage.test.tsx  Stage.tsx  TeamDetailPage.tsx  Teams.test.tsx  Teams.tsx  WorkspaceBar.test.tsx  WorkspaceBar.tsx
apps/desktop/src/data/: queries.test.tsx  queries.ts  useSend.test.tsx  useSend.ts
apps/desktop/src/engine/: StageEngine.ts  mockEngine.test.ts  mockEngine.ts  tauriEngine.test.ts  tauriEngine.ts  transcript.test.ts  transcript.ts
apps/desktop/src/lib/: api.ts  providers.ts
apps/desktop/src/routes/: -index.test.tsx  -shell.test.tsx  __root.tsx  chat.tsx  index.test.tsx  index.tsx  schedule.tsx  search.tsx  settings.tsx  teams.$teamId.tsx  teams.tsx
apps/desktop/src/store/: atoms.test.ts  atoms.ts
apps/server/: Cargo.toml  build.rs
apps/server/src/: lib.rs  main.rs  service.rs
crates/manch-acp/: Cargo.toml
crates/manch-acp/src/: lib.rs
crates/manch-core/: CHANGELOG.md  Cargo.toml
crates/manch-core/src/: builder.rs  lib.rs  testing.rs  turn.rs
crates/manch-dto/: CHANGELOG.md  Cargo.toml
crates/manch-dto/src/: lib.rs
crates/manch-llm/: Cargo.toml
crates/manch-llm/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs
crates/manch-protocol/: CHANGELOG.md  Cargo.toml
crates/manch-protocol/src/: lib.rs
crates/manch-protocol/tests/: serde_roundtrip.rs
crates/manch-server/: Cargo.toml
crates/manch-server/src/: main.rs  service.rs
docs/superpowers/plans/: 2026-06-15-byok-chat-window.md  2026-06-15-ui-server-monorepo-scaffold.md  2026-06-17-devex-release-tooling.md  2026-06-17-dual-path-hello-world.md  2026-06-29-manch-ui.md  2026-06-30-manch-ui-foundation.md  2026-06-30-manch-ui-sections.md  2026-07-01-manch-streaming.md  2026-07-01-manch-visual-polish.md  2026-07-02-manch-llm-acp-provider-crates.md  2026-07-02-puppetloader-kathputli-redesign.md  2026-07-04-manch-core-runtime.md
docs/superpowers/specs/: 2026-06-15-byok-chat-window-design.md  2026-06-15-ui-server-monorepo-scaffold-design.md  2026-06-17-devex-release-tooling-design.md  2026-06-17-dual-path-hello-world-design.md  2026-06-29-manch-ui-design.md  2026-06-30-manch-ui-multi-section.md  2026-07-01-manch-ui-streaming-polish-design.md  2026-07-02-manch-llm-acp-provider-crates-design.md  2026-07-02-puppetloader-kathputli-redesign-design.md  2026-07-04-manch-core-runtime-design.md
proto/manch/v1/: manch.proto
