[workspace]
resolver = "3"
members = ["crates/manch-protocol", "apps/server", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/manchhq/manch"
rust-version = "1.88"

[workspace.dependencies]
# Foundation crates (already published under the manchhq org)
katha = "0"
kathputli = "0"

# Official Agent Client Protocol SDK — Manch builds on this, it does not reinvent it.
agent-client-protocol = "1"

# Shared third-party deps
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "net", "macros"] }

# ConnectRPC + Axum stack
connectrpc = { version = "0.7", features = ["axum", "client"] }
connectrpc-build = "0.7"
buffa = { version = "0.7", features = ["json"] }
buffa-types = { version = "0.7", features = ["json"] }
axum = "0.8"
http-body = "1"

# Internal crates
manch-protocol = { path = "crates/manch-protocol", version = "0.0.1" }
