[package]
name = "manch-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Manch runtime: registries + the prompt/tool loop. Framework-free, domain-free."

[dependencies]
manch-protocol = { path = "../manch-protocol" }
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
