[package]
name = "manch-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "manch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
agent-client-protocol = { version = "=0.14.0", features = ["unstable"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
