[package]
name = "manch-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "manch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
agent-client-protocol = { version = "1", features = ["unstable"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
manch-dto = { workspace = true }
